<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Istethofy</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_licenses">Licenses</string>
    <string name="action_settings">Settings</string>
    <string name="tab_title_record">Record</string>
    <string name="tab_title_record1">Lungs</string>
    <string name="tab_title_record2">Heart</string>
    <string name="tab_title_saved_recordings">Saved Recordings</string>
    <string name="tab_title_record11">Commercials</string>
    <string name="tab_title_record12">Doctors</string>
    <string name="tab_title_record13">Clients</string>

    <!-- Toasts -->
    <string name="toast_recording_start">Recording is started</string>
    <string name="toast_recording_finish">Recording has been saved to</string>
    <string name="toast_file_delete">%1$s successfully deleted</string>
    <string name="toast_file_exists">The file %1$s already exists. Please choose a different file name.</string>

    <!-- Notifications -->


    <!-- Dialogs -->
    <string name="dialog_title_delete">Confirm Delete...</string>
    <string name="dialog_text_delete">Are you sure you would like to delete this file?</string>
    <string name="dialog_title_licenses">Open Source Licenses</string>
    <string name="dialog_title_share">Share File</string>
    <string name="dialog_title_rename">Rename File</string>
    <string name="dialog_title_options">Options</string>

    <string name="dialog_file_share">Share File</string>
    <string name="dialog_file_rename">Rename File</string>
    <string name="dialog_file_delete">Delete File</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>

    <string name="no_saved_recordings_message">No saved recordings</string>
    <string name="pause_recording_button">Pause</string>
    <string name="resume_recording_button">Play</string>
    <string name="default_file_name">My Recording</string>
    <string name="record_prompt">Tap the button to start recording</string>
    <string name="record_in_progress">Recording</string>

    <string name="send_to">Send to</string>

    <!-- Preferences -->
    <string name="pref_high_quality_key">pref_high_quality</string>
    <string name="pref_high_quality_title">Enable High Quality Recording</string>
    <string name="pref_high_quality_desc">Record in CD Quality</string>
    <string name="pref_about_key">pref_about</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_desc">v%s</string>


    <string name="license_title_fab">Floating Action Button</string>
    <string name="license_author_fab">Oleksandr Melnykov</string>
    <string name="license_content_fab">
        The MIT License (MIT)
        \n\nCopyright 2014 Oleksandr Melnykov

        \n\nPermission is hereby granted, free of charge, to any person obtaining a copy
        of this software and associated documentation files (the "Software"), to deal
        in the Software without restriction, including without limitation the rights
        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
        copies of the Software, and to permit persons to whom the Software is
        furnished to do so, subject to the following conditions:

        \n\nThe above copyright notice and this permission notice shall be included in all
        copies or substantial portions of the Software.

        \n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
        SOFTWARE.
    </string>

    <string name="license_title_tabs">PagerSlidingTabStrip</string>
    <string name="license_author_tabs">Andreas Stuetz</string>
    <string name="license_content_tabs">
        Copyright 2013 Andreas Stuetz

        \n\nLicensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

        \n\nhttp://www.apache.org/licenses/LICENSE-2.0

        \n\nUnless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="Home">Home</string>
    <string name="Message">Chat</string>
    <string name="Historique">Historic</string>
    <string name="Map">Map</string>
    <string name="Profile">Profile</string>
    <string name="LungsHome">Lungs</string>
    <string name="HeartHome">Heart</string>
    <string name="ListDoctorsHome">Doctors</string>
    <string name="Resultrecord">Result :</string>
    <string name="Tapthebutton">Tap the button to start recording</string>
    <string name="notification_recording">Recording...</string>
    <string name="AddCommercial">Add Commercial</string>
    <string name="NameAddComm">Name</string>
    <string name="FamilynameAddComm">Family name</string>
    <string name="EmailAddComm">Email</string>
    <string name="PhonenumberAddComm">Phone number</string>
    <string name="PasswordAddComm">Password</string>
    <string name="CityAddComm">City</string>
    <string name="Logout">Logout</string>
    <string name="AddressAdddoc">Address</string>
    <string name="adddoc">Add Doctor</string>
    <string name="SelectButtonClientDetails" tools:ignore="MissingTranslation">Select</string>
    <string name="WelcomeDoctor">Welcome Doctor</string>
    <string name="SingIn">SingIn</string>
    <string name="ButtonRegisterLogin">Don\'t have an account? Sign Up</string>
    <string name="edittextserchMap">Tap the address here</string>
    <string name="buttonSearchMap">Search</string>
    <string name="ButtonHopitals">Hospitals</string>
    <string name="ButtonUpdateImageProfile">Update Image</string>
    <string name="FeedbackProfile">Feedback</string>
    <string name="LogoutProfile">Logout</string>
    <string name="ConfirmPassword">Confirm password</string>
    <string name="Signup">Sign up</string>
    <string name="LogInResgister">Already have an account? Log in</string>
    <string name="ApprouvedVerifDetailsDoc">Approuved</string>
    <string name="PopUpDontShowThisMsgAgain">Don\'t show this message again</string>
    <string name="YourLocalizationMap">Your Localization...</string>
    <string name="PhoneCall">Phone call</string>
    <string name="SMS">SMS</string>
    <string name="UpdateButtonDonneeProfile">Update</string>
    <string name="Patients">Patients</string>
    <string name="VerifyDoc">Verify doc</string>
    <string name="AllUsers">All users</string>
    <string name="doctorsaddedlist">Doctors Added List</string>


</resources>
