<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/Home" />

    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/Message" />


    <item
        android:id="@+id/nav_tip"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/Historique" />

    <item
        android:id="@+id/nav_hospital"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/Map" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/Profile" />
</menu>