<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/contacttel"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/phone" />
        <TextView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:text="@string/PhoneCall"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/contactemail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/email" />
        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/EmailAddComm"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/contactsms"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/sms1" />
        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/SMS"
            android:gravity="center"/>

    </LinearLayout>
</LinearLayout>