<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hackforchange.teamBsissa.istethofyproject.Admin.AddComm">


    <ScrollView
        android:id="@+id/scrollbar"
        android:layout_width="match_parent"
        android:layout_height="1000dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1000dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:src="@drawable/doctorgpnetherlands" />

            <Button
                android:id="@+id/Acom"
                android:layout_width="280dp"
                android:layout_height="54dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="195dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/btnhomeclient"
                android:text="@string/AddCommercial"
                android:textSize="17dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="35dp"
                android:text="Istethofy"
                android:textColor="#BA000000"
                android:textSize="25dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="75dp"

                android:src="@drawable/icons8coeuravecpouls96" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="270dp"
                android:padding="13dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/NameAddComm"
                    android:textSize="17dp"
                    android:textColor="#1D1D1D"/>

                <EditText
                    android:id="@+id/prenom"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/NameAddComm"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/FamilynameAddComm"
                    android:textSize="17dp"
                    android:textColor="#1D1D1D"/>

                <EditText
                    android:id="@+id/nom"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/FamilynameAddComm"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/EmailAddComm"
                    android:textSize="17dp"
                    android:textColor="#1D1D1D"/>

                <EditText
                    android:id="@+id/mail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/EmailAddComm"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/PhonenumberAddComm"
                    android:textSize="17dp"
                    android:textColor="#1D1D1D"/>

                <EditText
                    android:id="@+id/tel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/PhonenumberAddComm"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:singleLine="true"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/PasswordAddComm"
                    android:textSize="17dp"
                    android:textColor="#1D1D1D"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/PasswordAddComm"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/CityAddComm"
                    android:textSize="17dp"
                    android:textColor="#1D1D1D"/>





                <Spinner
                    android:id="@+id/region"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:entries="@array/regions"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/backgroundtext"/>

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:text="@string/AddCommercial"
                    android:background="@drawable/backgroundbutton" />


                <Button
                    android:id="@+id/logoutadmin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:text="@string/Logout"
                    android:background="@drawable/backgroundbutton" />


            </LinearLayout>
        </RelativeLayout>
    </ScrollView>





    <RelativeLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottomNavView_Bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bottombar"
            app:menu="@menu/bottom_navigation_menu3">


        </android.support.design.widget.BottomNavigationView>
    </RelativeLayout>
</RelativeLayout>
